# learning-deep-learning

./: .buildinfo  .gitignore  01-shallow.ipynb  LICENSE  README.html  README.md  _config.yml  _toc.yml  cheese_sheets.csv  genindex.html  happiness.csv  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/notebooks/: 01_linear_regression.doctree  02_logistic_regression.doctree  03_backprop.doctree  04_nonlinear_regression.doctree  05_multiclass.doctree
_sources/: README.md  index.md
data/: 02_dummy_data.csv
html/: .buildinfo  searchindex.js
html/_sources/: README.md
learningdl/: 01_linear_regression.html  02_logistic_regression.html  03_backprop.html  03_backprop.ipynb  04_matrix_notation.html  05_activation.html  06_nonlinear_regression.html  07_multiclass.html  08_regularisation.html  09_optimisers.html  10_experiments.html
notebooks/: 01_linear_regression.html  01_linear_regression.ipynb  02_logistic_regression.html  02_logistic_regression.ipynb  03_backprop.html  03_backprop.ipynb  03_relu.ipynb  04_matrix_notation.html  04_matrix_notation.ipynb  04_nonlinear_regression.html  04_relu.html  04_relu.ipynb  05_activation.html  05_multiclass.html  05_multiclass.ipynb  05_relu.html  05_relu.ipynb  06_multiclass.html  06_multiclass.ipynb  06_nonlinear_regression.html  06_nonlinear_regression.ipynb  07_multiclass.html  08_regularisation.html  08_regularisation.ipynb  09_optimisers.html  10_experiments.html  10_experiments.ipynb  backprop.html  backprop.ipynb
(+28 files in other folders)
